chore(full calendar): configurando full calendar

--- a/src/app/@modules/configuracoes/configuracoes.component.html
+++ b/src/app/@modules/configuracoes/configuracoes.component.html
@@ -6,7 +6,7 @@
           <div class="row m-0">
             <div class="col-12 d-flex justify-content-between align-items-center p-0">
               <h4 class="m-0">Dados da Clínica</h4>
-              <button  mat-button type="button" (click)="openDialog(1)">
+              <button mat-button type="button" (click)="openDialog(1)">
                 <i class="feather icon-edit"></i>
               </button>
             </div>
@@ -15,25 +15,25 @@
         <div class="row ms-0 mt-3">
           <div class="col-12 d-flex justify-content-center">
             <figure>
-              <img src="../../../../../assets/logo-svg.svg" alt="Logo"/>
+              <img src="../../../../../assets/logo-svg.svg" alt="Logo" />
               <figcaption class="text-center">Logo</figcaption>
             </figure>
           </div>
           <div class="col-12">
-             <ul class="detalhes">
-               <li>
-                 <i class="feather icon-map-pin"></i>
-                 <span>Endereço</span>
-               </li>
-               <li>
-                 <i class="feather icon-phone"></i>
-                 <span>(00) 0 0000-0000 - (00) 000-0000</span>
-               </li>
-               <li class="email">
-                 <i class="feather icon-mail email"></i>
-                 <span class= "m-0 d-inline">email@gmail.com</span>
-               </li>
-             </ul>
+            <ul class="detalhes">
+              <li>
+                <i class="feather icon-map-pin"></i>
+                <span>Endereço</span>
+              </li>
+              <li>
+                <i class="feather icon-phone"></i>
+                <span>(00) 0 0000-0000 - (00) 000-0000</span>
+              </li>
+              <li class="email">
+                <i class="feather icon-mail email"></i>
+                <span class="m-0 d-inline">email@gmail.com</span>
+              </li>
+            </ul>
           </div>
         </div>
       </app-card-content>
@@ -44,7 +44,7 @@
           <div class="row">
             <div class="col-12 d-flex justify-content-between align-items-center">
               <h4 class="m-0">História</h4>
-              <button  mat-button type="button" (click)="openDialog(2)">
+              <button mat-button type="button" (click)="openDialog(2)">
                 <i class="feather icon-edit"></i>
               </button>
             </div>
@@ -53,9 +53,9 @@
         <div class="row">
           <div class="col-12">
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-              when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book.
             </p>
           </div>
         </div>
@@ -67,7 +67,7 @@
           <div class="row">
             <div class="col-12 d-flex justify-content-between align-items-center">
               <h4 class="m-0">Missão, Valores e Visão</h4>
-              <button  mat-button type="button" (click)="openDialog(3)">
+              <button mat-button type="button" (click)="openDialog(3)">
                 <i class="feather icon-edit"></i>
               </button>
             </div>
@@ -76,23 +76,23 @@
         <mat-tab-group mat-align-tabs="center">
           <mat-tab label="Missão">
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-              when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book.
             </p>
           </mat-tab>
           <mat-tab label="Valores">
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-              when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book.
             </p>
           </mat-tab>
           <mat-tab label="Visão">
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-              when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book.
             </p>
           </mat-tab>
         </mat-tab-group>
