--- a/src/app/@modules/home/home.component.html
+++ b/src/app/@modules/home/home.component.html
@@ -26,11 +26,14 @@
             </div>
           </div>
           <!-- Cards rigth-->
-        </div> <!-- /col-md-5 col-sm-12 -->
+        </div>
+        <!-- /col-md-5 col-sm-12 -->
         <div class="col-md-7 col-sm-12">
           <app-estatisticas-medico></app-estatisticas-medico>
-        </div><!-- /col-md-5 col-sm-12 -->
-      </div><!-- /row-->
+        </div>
+        <!-- /col-md-5 col-sm-12 -->
+      </div>
+      <!-- /row-->
     </div>
   </ng-container>
   <!-- Visão Clínica -->
@@ -52,7 +55,8 @@
         <div class="col-md-3 col-12 d-flex justify-content-center align-items-center pt-3 pt-md-0">
           <app-card-novo-paciente></app-card-novo-paciente>
         </div>
-      </div><!-- /row -->
+      </div>
+      <!-- /row -->
       <!-- <div class="row mt-4">
       </div> -->
       <div class="row pb-3">
