--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -5,3 +5,25 @@
 .mat-icon {
   vertical-align: middle;
 }
+
+::ng-deep .full-calendar {
+  .md-content {
+    width: 550px !important;
+    overflow-y: auto !important;
+    overflow-x: hidden !important;
+    display: flex;
+  }
+}
+
+
+.consulta-details {
+  p {
+    font-size: 16px;
+    color: var(--dark);
+
+    span {
+      color: var(--tcc-secondary);
+      font-weight: 500;
+    }
+  }
+}
