--- a/src/app/auth/components/update-password/update-password.component.html
+++ b/src/app/auth/components/update-password/update-password.component.html
@@ -6,7 +6,9 @@
           <mat-card-content>
             <div class="row card-content m-0 pt-3">
               <div class="col-12 p-0">
-                <button mat-button type="button" (click)="navigateLogin()"><i class="feather icon-arrow-left me-2"></i>login</button>
+                <button mat-button type="button" (click)="navigateLogin()">
+                  <i class="feather icon-arrow-left me-2"></i>login
+                </button>
               </div>
               <div class="col-12 text-center">
                 <img src="../../../../assets/logo-svg.svg" alt="Logo" />
