--- a/src/app/@modules/cadastro/cadastro.component.html
+++ b/src/app/@modules/cadastro/cadastro.component.html
@@ -50,7 +50,9 @@
           <!--/col-md-2-->
           <div class="col-md-3 p-md-0 align-button col-sm-12">
             <button mat-raised-button class="btn-warning p-2 w-75 h-75 me-3" type="button">Buscar</button>
-            <button mat-raised-button class="btn-primary p-2 w-100 h-75" type="button" (click)="openDialog()">Novo colaborador</button>
+            <button mat-raised-button class="btn-primary p-2 w-100 h-75" type="button" (click)="openDialog()">
+              Novo colaborador
+            </button>
           </div>
         </div>
       </app-card-content>
