--- a/src/app/@modules/cadastro/components/colaboradores/table-colaboradores/table-colaboradores.component.html
+++ b/src/app/@modules/cadastro/components/colaboradores/table-colaboradores/table-colaboradores.component.html
@@ -24,22 +24,39 @@
           <td class="td-format">{{ colaborador?.idade }}</td>
           <td class="td-format width-td">
             <div class="overlay-text">
-              <span class="badge bg-primary"
-                [ngClass]="{'bg-success': colaborador?.status === 'A', 'bg-danger': colaborador?.status === 'I'}">
+              <span
+                class="badge bg-primary"
+                [ngClass]="{ 'bg-success': colaborador?.status === 'A', 'bg-danger': colaborador?.status === 'I' }"
+              >
                 {{ colaborador?.status === 'A' ? 'Ativo' : 'Inativo' }}
               </span>
             </div>
             <div class="overlay-button">
-              <button mat-raised-button color="primary" type="button" class="btn-secondary me-2"
-                (click)="openDialog(colaborador)">
+              <button
+                mat-raised-button
+                color="primary"
+                type="button"
+                class="btn-secondary me-2"
+                (click)="openDialog(colaborador)"
+              >
                 <i class="feather icon-edit-2"></i>
               </button>
-              <button mat-raised-button color="primary" type="button" class="btn-success me-2"
-                *ngIf="colaborador?.status === 'I'">
+              <button
+                mat-raised-button
+                color="primary"
+                type="button"
+                class="btn-success me-2"
+                *ngIf="colaborador?.status === 'I'"
+              >
                 <i class="feather icon-check-circle"></i>
               </button>
-              <button mat-raised-button color="primary" type="button" class="btn-danger me-2"
-                *ngIf="colaborador?.status === 'A'">
+              <button
+                mat-raised-button
+                color="primary"
+                type="button"
+                class="btn-danger me-2"
+                *ngIf="colaborador?.status === 'A'"
+              >
                 <i class="feather icon-x"></i>
               </button>
             </div>
