--- a/src/app/@modules/cadastro/components/especialidades/table-especialidades/table-especialidades.component.html
+++ b/src/app/@modules/cadastro/components/especialidades/table-especialidades/table-especialidades.component.html
@@ -16,22 +16,39 @@
           <td class="td-format">{{ especialidade?.tipoSanguineo }}</td>
           <td class="td-format width-td">
             <div class="overlay-text">
-              <span class="badge bg-primary"
-                [ngClass]="{'bg-success': especialidade?.status === 'A', 'bg-danger': especialidade?.status === 'I'}">
+              <span
+                class="badge bg-primary"
+                [ngClass]="{ 'bg-success': especialidade?.status === 'A', 'bg-danger': especialidade?.status === 'I' }"
+              >
                 {{ especialidade?.status === 'A' ? 'Ativo' : 'Inativo' }}
               </span>
             </div>
             <div class="overlay-button">
-              <button mat-raised-button color="primary" type="button" class="btn-secondary me-2"
-                (click)="openDialog(especialidade)">
+              <button
+                mat-raised-button
+                color="primary"
+                type="button"
+                class="btn-secondary me-2"
+                (click)="openDialog(especialidade)"
+              >
                 <i class="feather icon-edit-2"></i>
               </button>
-              <button mat-raised-button color="primary" type="button" class="btn-success me-2"
-                *ngIf="especialidade?.status === 'I'">
+              <button
+                mat-raised-button
+                color="primary"
+                type="button"
+                class="btn-success me-2"
+                *ngIf="especialidade?.status === 'I'"
+              >
                 <i class="feather icon-check-circle"></i>
               </button>
-              <button mat-raised-button color="primary" type="button" class="btn-danger me-2"
-                *ngIf="especialidade?.status === 'A'">
+              <button
+                mat-raised-button
+                color="primary"
+                type="button"
+                class="btn-danger me-2"
+                *ngIf="especialidade?.status === 'A'"
+              >
                 <i class="feather icon-x"></i>
               </button>
             </div>
