--- a/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
@@ -1,22 +1,29 @@
-<app-card-content class="w-100">
-  <div class="row m-0">
-    <div class="col-12 text-center">
-      <i class="feather icon-calendar icon-add"></i>
+<ng-container *ngIf="visibleCard == true">
+  <app-card-content class="w-100">
+    <div class="row m-0">
+      <div class="col-12 text-center">
+        <i class="feather icon-calendar icon-add"></i>
+      </div>
+      <div class="col-12">
+        <h2 class="m-0 text-center title"><i class="feather icon-plus icon-add"></i>Consulta</h2>
+      </div>
+      <div class="col-12 text-center pt-1 pb-2">
+        <span class="description-add">Agendar nova consulta</span>
+      </div>
+      <div class="col-12 text-center">
+        <button
+          type="button"
+          mat-raised-button
+          color="primary"
+          class="btn-success"
+          (click)="modal.show('agendar-consulta')"
+        >
+          Agendar
+        </button>
+      </div>
     </div>
-    <div class="col-12">
-      <h2 class="m-0 text-center title"><i class="feather icon-plus icon-add"></i>Consulta</h2>
-    </div>
-    <div class="col-12 text-center pt-1 pb-2">
-      <span class="description-add">Agendar nova consulta</span>
-    </div>
-    <div class="col-12 text-center">
-      <button type="button" mat-raised-button color="primary" class="btn-success"
-        (click)="modal.show('agendar-consulta')">
-        Agendar
-      </button>
-    </div>
-  </div>
-</app-card-content>
+  </app-card-content>
+</ng-container>
 
 <app-modal-animation modalID="agendar-consulta" modalClass="md-effect-7 consulta-home" backDrop="true">
   <div class="md-header container">
@@ -74,8 +81,11 @@
               <div class="col-12">
                 <mat-form-field class="w-100" appearance="outline">
                   <mat-label>Sintomas (opcional)</mat-label>
-                  <textarea matInput placeholder="Digite os sintomas do paciente aqui..."
-                    formControlName="sintomas"></textarea>
+                  <textarea
+                    matInput
+                    placeholder="Digite os sintomas do paciente aqui..."
+                    formControlName="sintomas"
+                  ></textarea>
                 </mat-form-field>
               </div>
             </div>
@@ -89,7 +99,7 @@
         <div class="container">
           <ng-container *ngIf="steps === 0">
             <form [formGroup]="form">
-              <div class="row m-0 height-row animate__fadeInRight ">
+              <div class="row m-0 height-row animate__fadeInRight">
                 <div class="col-12">
                   <h3 class="text-uppercase mb-1">Selecione um Paciente já Cadastrado</h3>
                   <!-- <mat-form-field appearance="outline" class="w-100">
@@ -100,14 +110,16 @@
                   <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Pesquise paciente pelo nome ou CPF</mat-label>
                     <mat-icon matSuffix>search</mat-icon>
-                    <input type="text"
-                           placeholder="Busque pelo nome do paciente"
-                           aria-label="Number"
-                           matInput
-                           [formControl]="search"
-                           [matAutocomplete]="auto">
+                    <input
+                      type="text"
+                      placeholder="Busque pelo nome do paciente"
+                      aria-label="Number"
+                      matInput
+                      [formControl]="search"
+                      [matAutocomplete]="auto"
+                    />
                     <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-                      <mat-option *ngFor="let option of filteredOptions | async" [value]="option.nome"  >
+                      <mat-option *ngFor="let option of filteredOptions | async" [value]="option.nome">
                         <span class="ms-2 busca-span">Nome:</span> {{ option.nome }}
                         <span class="ms-2 busca-span">CPF:</span> {{ option.cpf }}
                       </mat-option>
@@ -123,8 +135,11 @@
                   </button>
                 </div>
                 <div class="col-12 d-flex align-items-end justify-content-end">
-                  <button mat-stroked-button class="btn btn-secondary"
-                    (click)="closeModalAndResetForm({ close: true, modalId: 'agendar-consulta'})">
+                  <button
+                    mat-stroked-button
+                    class="btn btn-secondary"
+                    (click)="closeModalAndResetForm({ close: true, modalId: 'agendar-consulta' })"
+                  >
                     <i class="feather icon-x"></i>
                     Cancelar
                   </button>
@@ -132,24 +147,28 @@
                     <i class="feather icon-check"></i>
                     Confirmar Agendamento
                   </button> -->
-                  <button mat-stroked-button class="btn btn-primary ms-3"
-                  (click)="selectPaciente()">
+                  <button mat-stroked-button class="btn btn-primary ms-3" (click)="selectPaciente()">
                     <i class="feather icon-check"></i>
                     Avançar
                   </button>
                 </div>
               </div>
             </form>
-
           </ng-container>
           <!-- Formulário pré-cadastro Paciente -->
           <ng-container *ngIf="steps === 1">
-            <app-form-pre-cadastro-paciente (closeModal)="closeModalAndResetForm($event)" (stepId)="setStep($event)"
-              (formPreCadastroPaciente)="getFormPreCadastroPaciente($event)"></app-form-pre-cadastro-paciente>
+            <app-form-pre-cadastro-paciente
+              (closeModal)="closeModalAndResetForm($event)"
+              (stepId)="setStep($event)"
+              (formPreCadastroPaciente)="getFormPreCadastroPaciente($event)"
+            ></app-form-pre-cadastro-paciente>
           </ng-container>
           <ng-container *ngIf="steps === 2">
-            <app-agendamento-consulta (closeModal)="closeModalAndResetForm($event)" (stepId)="setStep($event)"
-              [formConsulta]="form"></app-agendamento-consulta>
+            <app-agendamento-consulta
+              (closeModal)="closeModalAndResetForm($event)"
+              (stepId)="setStep($event)"
+              [formConsulta]="form"
+            ></app-agendamento-consulta>
           </ng-container>
           <!-- <app-consulta-medica></app-consulta-medica> -->
         </div>
