--- a/src/app/@modules/home/components/quantitativo-dados-clinica/quantitativo-dados-clinica.component.html
+++ b/src/app/@modules/home/components/quantitativo-dados-clinica/quantitativo-dados-clinica.component.html
@@ -1,7 +1,12 @@
 <div class="row">
   <div class="col-md-6 col-12 pt-3 pt-md-0">
-    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-thirt" [loadingLine]="loading"
-      progressClass="progress-laranja">
+    <app-card-content
+      cardClass="padd-footer"
+      isCardFooter="true"
+      footerClass="bg-card-thirt"
+      [loadingLine]="loading"
+      progressClass="progress-laranja"
+    >
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
@@ -26,8 +31,13 @@
     </app-card-content>
   </div>
   <div class="col-md-6 col-12 pt-3 pt-md-0">
-    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-secondary"
-      [loadingLine]="loading" progressClass="progress-verde">
+    <app-card-content
+      cardClass="padd-footer"
+      isCardFooter="true"
+      footerClass="bg-card-secondary"
+      [loadingLine]="loading"
+      progressClass="progress-verde"
+    >
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
@@ -52,8 +62,13 @@
     </app-card-content>
   </div>
   <div class="col-md-6 col-12 pt-3">
-    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-four" [loadingLine]="loading"
-      progressClass="progress-vermelho">
+    <app-card-content
+      cardClass="padd-footer"
+      isCardFooter="true"
+      footerClass="bg-card-four"
+      [loadingLine]="loading"
+      progressClass="progress-vermelho"
+    >
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
@@ -78,8 +93,13 @@
     </app-card-content>
   </div>
   <div class="col-md-6 col-12 pt-3">
-    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-primary" [loadingLine]="loading"
-      progressClass="progress-azul">
+    <app-card-content
+      cardClass="padd-footer"
+      isCardFooter="true"
+      footerClass="bg-card-primary"
+      [loadingLine]="loading"
+      progressClass="progress-azul"
+    >
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
