--- a/src/app/@modules/paciente/paciente.component.html
+++ b/src/app/@modules/paciente/paciente.component.html
@@ -14,6 +14,7 @@
               </form>
             </div>
             <!-- /col-md-4 -->
+            <!-- Apenas assistente poderá visualizar esse campo -->
             <div class="col-md-8 d-flex align-items-center justify-content-end">
               <button type="button" mat-raised-button color="primary" class="px-3 py-0" (click)="openDialog()">
                 Nova consulta
@@ -25,11 +26,11 @@
       </div>
       <div class="col-12">
         <!-- VISÃO FUNCIONÁRIO -->
-        <ng-container *ngIf="false">
+        <ng-container *ngIf="true">
           <app-table-pacientes></app-table-pacientes>
         </ng-container>
         <!-- VISÃO MÉDICO -->
-        <ng-container *ngIf="true">
+        <ng-container *ngIf="false">
           <app-table-medico></app-table-medico>
         </ng-container>
       </div>
