--- a/src/app/@shared/card-content/card-content.component.html
+++ b/src/app/@shared/card-content/card-content.component.html
@@ -3,7 +3,7 @@
   <div *ngIf="isHeader">
     <ng-content select=".card-header"></ng-content>
 
-    <hr class="mb-2 mt-1">
+    <hr class="mb-2 mt-1" />
   </div>
   <mat-card-content>
     <div class="card-content">
