--- a/src/app/@shared/form-debug/form-debug.component.html
+++ b/src/app/@shared/form-debug/form-debug.component.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 20px;" *ngIf="form" >
+<div style="margin-top: 20px" *ngIf="form">
   <div style="color: #000">Detalhes do form</div>
   <pre style="color: #000">Form válido: {{ form.valid }}</pre>
   <!--pre>Form submetido: {{ form.submitted }}</pre -->
