--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -57,12 +57,7 @@
             <i class="feather icon-bookmark pe-2"></i>
             <span>Especialidades</span>
           </a>
-          <a
-            mat-list-item
-            routerLink="/configuracoes"
-            routerLinkActive="active"
-            (click)="isMobile && sidenav.close()"
-          >
+          <a mat-list-item routerLink="/configuracoes" routerLinkActive="active" (click)="isMobile && sidenav.close()">
             <i class="feather icon-settings pe-2"></i>
             <span>Configurações</span>
           </a>
@@ -89,7 +84,7 @@
         </mat-list>
       </nav>
     </mat-sidenav>
-    <mat-sidenav-content class="mat-sidenav ">
+    <mat-sidenav-content class="mat-sidenav">
       <mat-toolbar class="bg-header">
         <button class="menu-button" mat-icon-button (click)="sidenav.toggle()" fxHide.gt-sm>
           <mat-icon>menu</mat-icon>
