--- a/src/theme/_root.scss
+++ b/src/theme/_root.scss
@@ -18,7 +18,7 @@
   --tcc-primary: #4099ff;
   --tcc-secondary: #6c757d;
   --tcc-success: #2ed8b6;
-  --white: #FFFFFF;
+  --white: #ffffff;
   --info: #00bcd4;
   --warning: #ffb64d;
   --danger: #ff5370;
