chore: mapeando end-points

--- a/src/app/@modules/cadastro/components/colaboradores/cadastro-colaborador/cadastro-colaborador.component.html
+++ b/src/app/@modules/cadastro/components/colaboradores/cadastro-colaborador/cadastro-colaborador.component.html
@@ -1,7 +1,4 @@
-<div class="row h-90-auto">
-  <div class="col-12 d-flex justify-content-end">
-    <i class="feather icon-x-circle" (click)="closeDialog()"></i>
-  </div>
+<div class="row ">
   <div class="col-12">
     <h2 class="mt-0 mb-2" *ngIf="!dadosColaborador?.update">Novo Colaborador</h2>
     <h2 class="mt-0 mb-2" *ngIf="dadosColaborador?.update">Atualizar Colaborador</h2>
