--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -6,8 +6,6 @@
     <div class="col-md-5 col-sm-12 d-flex justify-content-center align-items-center bg-form">
       <div class="box-form shadow">
         <form (ngSubmit)="login()" [formGroup]="loginForm" novalidate>
-          <div class="login-error" [hidden]="!error || isLoading">Username or password incorrect.</div>
-          <br />
           <h1 class="text-center mb-3 mt-0 title">Login</h1>
           <div class="login-fields px-3">
             <mat-form-field appearance="outline">
@@ -17,11 +15,11 @@
                 matInput
                 placeholder="Digite seu e-mail"
                 autocomplete="off"
-                formControlName="username"
+                formControlName="email"
               />
               <mat-error class="pt-0">
                 <app-error-control-message
-                  [control]="loginForm.controls.username"
+                  [control]="loginForm.controls.email"
                   label="E-mail"
                 ></app-error-control-message
                 >''
@@ -32,7 +30,7 @@
               <input
                 [type]="hide ? 'password' : 'text'"
                 matInput
-                formControlName="password"
+                formControlName="senha"
                 autocomplete="current-password"
                 placeholder="Digite sua senha"
                 required
@@ -49,7 +47,7 @@
               </button>
               <mat-error class="pt-0">
                 <app-error-control-message
-                  [control]="loginForm.controls.password"
+                  [control]="loginForm.controls.senha"
                   label="Senha"
                 ></app-error-control-message>
               </mat-error>
@@ -68,10 +66,10 @@
             <div class="w-100 d-flex justify-content-center">
               <button class="btn btn-primary-tcc p-2" [disabled]="loginForm.invalid || isLoading">entrar</button>
             </div>
-            <mat-checkbox class="example-margin" formControlName="teste">Check me!</mat-checkbox>
           </div>
         </form>
       </div>
     </div>
   </div>
 </div>
+<app-loader *ngIf="isLoading"></app-loader>
