chore(login e precadastro): finalizando integrações de pre-cadastro e login/primeiro acesso

--- a/src/app/@modules/home/components/card-nova-consulta/detalhes-paciente-home/detalhes-paciente-home.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/detalhes-paciente-home/detalhes-paciente-home.component.html
@@ -1,7 +1,7 @@
 <div class="row m-0 detalhes-paciente animate__fadeInUp">
   <div class="col-12">
     <h3 class="m-0">Detalhes do paciente</h3>
-    <hr class="mt-1 mb-2">
+    <hr class="mt-1 mb-2" />
   </div>
   <div class="col-6">
     <p class="m-0"><span>Data de nasc.: </span></p>
