--- a/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.scss
+++ b/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.scss
@@ -2,3 +2,10 @@
   padding-top: 0 !important;
   padding-bottom: 0 !important;
 }
+
+.perfil {
+  color: var(--tcc-dark);
+  span {
+    color: var(--tcc-gray);
+  }
+}
