--- a/src/app/auth/components/update-password/update-password.component.html
+++ b/src/app/auth/components/update-password/update-password.component.html
@@ -27,7 +27,7 @@
                         autocomplete="current-password"
                         placeholder="Digite sua nova senha"
                         required
-                        formControlName="antigoPassword"
+                        formControlName="password"
                       />
                       <!--formControlName="password"-->
                       <button
@@ -51,7 +51,7 @@
                         autocomplete="current-password"
                         placeholder="Confirme sua senha"
                         required
-                        formControlName="novoPassword"
+                        formControlName="passwordConfirmation"
                       />
                       <!--formControlName="password"-->
                       <button
@@ -78,3 +78,16 @@
     </div>
   </div>
 </div>
+<app-loader *ngIf="isLoading"></app-loader>
+<app-modal-animation modalID="aviso-senha" modalClass="md-effect-10 aviso-senha ">
+  <div class="md-body container">
+    <div class="row m-0 p-4 text-center">
+      <div class="col-12">
+        <p class="m-0">Altere sua senha temporária pra continuar utilizando o <strong>IHealth.</strong></p>
+      </div>
+      <div class="col-12 d-flex justify-content-center pt-3">
+        <button class="btn btn-primary" type="button" (click)="modal.close('aviso-senha')">Ok, entendi.</button>
+      </div>
+    </div>
+  </div>
+</app-modal-animation>
