--- a/src/app/auth/components/update-password/update-password.component.scss
+++ b/src/app/auth/components/update-password/update-password.component.scss
@@ -18,3 +18,16 @@
 h1 {
   color: var(--dark);
 }
+
+::ng-deep .aviso-senha {
+  p {
+    font-size: 20px;
+  }
+
+  .md-content {
+    width: 550px !important;
+    overflow-y: auto !important;
+    overflow-x: hidden !important;
+    display: flex;
+  }
+}
