--- a/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.html
@@ -4,21 +4,12 @@
       <h3 class="m-0">Novo Paciente</h3>
       <span>Pré-cadastro do paciente</span>
     </div>
-    <div class="col-12 col-md-6">
+    <div class="col-12">
       <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Nome</mat-label>
+        <mat-label>Nome Completo</mat-label>
         <input type="text" matInput placeholder="Digite primeiro Nome" autocomplete="off" formControlName="nome" />
         <mat-error>
           <app-error-control-message [control]="form.controls.nome" label="Nome"></app-error-control-message>
-        </mat-error>
-      </mat-form-field>
-    </div>
-    <div class="col-12 col-md-6">
-      <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Sobrenome</mat-label>
-        <input type="text" matInput placeholder="Digite o Sobrenome" autocomplete="off" formControlName="sobrenome" />
-        <mat-error>
-          <app-error-control-message [control]="form.controls.sobrenome" label="Sobrenome"></app-error-control-message>
         </mat-error>
       </mat-form-field>
     </div>
@@ -38,7 +29,23 @@
         </mat-error>
       </mat-form-field>
     </div>
-    <div class="col-12 col-md-8">
+    <div class="col-12 col-md-3">
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Telefone</mat-label>
+        <input
+          type="text"
+          matInput
+          placeholder="Digite o Telefone"
+          autocomplete="off"
+          mask="(00) 0 0000 0000"
+          formControlName="telefone"
+        />
+        <mat-error>
+          <app-error-control-message [control]="form.controls.cpf" label="Telefone"></app-error-control-message>
+        </mat-error>
+      </mat-form-field>
+    </div>
+    <div class="col-12 col-md-5">
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>E-mail</mat-label>
         <input type="text" matInput placeholder="Digite o e-mail" autocomplete="off" formControlName="email" />
@@ -51,7 +58,7 @@
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Sexo</mat-label>
         <mat-select formControlName="sexo" required>
-          <mat-option [value]="sexo.id" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
+          <mat-option [value]="sexo.value" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
         </mat-select>
         <mat-error>
           <app-error-control-message [control]="form.controls.sexo" label="Sexo"> </app-error-control-message>
@@ -65,18 +72,30 @@
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
         <mat-error>
-          <app-error-control-message
-            [control]="form.controls.dtNascimento"
-            label="Data de nascimento"
-          ></app-error-control-message>
+          <app-error-control-message [control]="form.controls.dtNascimento" label="Data de nascimento">
+          </app-error-control-message>
           <!-- <app-error-control-message [control]="form.get('dtNascimento').hasError('dateValidator')" label="Data"></app-error-control-message> -->
         </mat-error>
       </mat-form-field>
     </div>
+    <div class="col-12 col-md-4">
+      <p class="m-0 perfil">
+        Perfil: <span>{{ controlPerfil.value }}</span>
+      </p>
+    </div>
     <div class="col-12 d-flex align-items-end justify-content-end pt-4">
-      <button mat-stroked-button class="btn btn-outline-secondary" (click)="back()">
+      <button mat-stroked-button class="btn btn-outline-secondary" (click)="back()" *ngIf="!novoPaciente">
         <i class="feather icon-arrow-left"></i>
-        Voltar
+        voltar
+      </button>
+      <button
+        mat-stroked-button
+        class="btn btn-outline-secondary"
+        (click)="closeModalAndResetForm('pre-cadastro')"
+        *ngIf="novoPaciente"
+      >
+        <i class="feather icon-x"></i>
+        cancelar
       </button>
       <button
         mat-stroked-button
@@ -84,10 +103,16 @@
         (click)="submitPreCadastroPaciente(2)"
         [disabled]="!form.valid"
       >
-        <i class="feather icon-check"></i>
-        Confirmar e continuar o Agendamento
+        <i *ngIf="!loading" class="feather icon-check"></i>
+        <ng-container *ngIf="loading">
+          <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+          <span class="sr-only">Aguarde...</span>
+        </ng-container>
+        <span *ngIf="!novoPaciente!; loading">confirmar e continuar o Agendamento</span>
+        <span *ngIf="novoPaciente && !loading">salvar</span>
       </button>
     </div>
   </div>
   <!-- /row-->
+  <!-- <app-form-debug [form]="form"></app-form-debug> -->
 </form>
