--- a/src/app/@modules/home/components/card-novo-paciente/card-novo-paciente.component.html
+++ b/src/app/@modules/home/components/card-novo-paciente/card-novo-paciente.component.html
@@ -15,10 +15,22 @@
         mat-raised-button
         color="primary"
         class="btn btn-primary"
-        (click)="redirectToRegisterPaciente()"
+        (click)="modal.show('pre-cadastro')"
       >
         Cadastrar
       </button>
     </div>
   </div>
 </app-card-content>
+<app-modal-animation modalID="pre-cadastro" modalClass="md-effect-11 pre-cadastro-home">
+  <div class="container md-body py-3">
+    <div class="row m-0">
+      <div class="col-12">
+        <app-form-pre-cadastro-paciente
+          novoPaciente="true"
+          (closeModal)="closeModal($event)"
+        ></app-form-pre-cadastro-paciente>
+      </div>
+    </div>
+  </div>
+</app-modal-animation>
