--- a/src/app/@modules/cadastro/components/colaboradores/form-cadastro-colaborador/form-cadastro-colaborador.component.html
+++ b/src/app/@modules/cadastro/components/colaboradores/form-cadastro-colaborador/form-cadastro-colaborador.component.html
@@ -1,226 +1,216 @@
-<div class="animate__fadeInUp2">
-  <div class="row mb-3">
-    <div class="col-md-12">
-      <h3 class="mt-3 mb-0">Dados Pessoais</h3>
-      <hr class="my-1" />
-    </div>
-    <!-- /col-md-12 -->
-  </div>
-  <!-- /row -->
-  <form autocomplete="off">
-    <div class="row">
-      <div class="col-md-4 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Nome</mat-label>
-          <input type="text" matInput placeholder="Digite seu nome" autocomplete="off" />
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
+<button class="btn btn-primary" type="button" (click)="modal.show('form-cadastro-colaborador')">
+  Novo colaborador
+</button>
+
+<app-modal-animation [modalID]="modalID" modalClass="md-effect-10 form-cadastro-colaborador" backDrop="true">
+  <form class="container md-body p-4" [formGroup]="form">
+    <div class="row m-0">
+      <div class="col-12 d-flex justify-content-end">
+        <i class="feather icon-x cursor" (click)="closeModal('form-cadastro-colaborador')"></i>
       </div>
-      <!--/col-md-4-->
-      <div class="col-md-5 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Sobrenome</mat-label>
-          <input type="text" matInput placeholder="Digite seu sobrenome" autocomplete="off" />
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
+      <div class="col-12 mt-2">
+        <h3 class="mt-0 mb-2">Perfil de Acesso</h3>
       </div>
-      <!--/col-md-5-->
-      <div class="col-md-3 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Data de Nascimento</mat-label>
-          <input
-            type="text"
-            matInput
-            placeholder="Digite sua Data de Nascimento"
-            autocomplete="off"
-            mask="00/00/0000"
-          />
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
+      <div class="col-12">
+        <div class="col-md-4 col-sm-12">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Perfil</mat-label>
+            <mat-select formControlName="perfil">
+              <mat-option [value]="perfil.id" *ngFor="let perfil of listaPerfis">{{ perfil.description }}</mat-option>
+            </mat-select>
+            <!-- <mat-error>
+                          <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
+                        </mat-error> -->
+          </mat-form-field>
+        </div>
       </div>
-      <!--/col-md-3-->
-      <div class="col-md-3 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>CPF</mat-label>
-          <input type="text" matInput placeholder="Digite seu CPF" autocomplete="off" mask="000.000.000-00" />
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
-      </div>
-      <!--/col-md-3-->
-      <div class="col-md-2 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Sexo</mat-label>
-          <mat-select>
-            <!-- formControlName="username"-->
-            <mat-option [value]="sexo.id" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
-          </mat-select>
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
-      </div>
-      <!--/col-md-2-->
-      <div class="col-md-7 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>E-mail</mat-label>
-          <input type="text" matInput placeholder="Digite seu e-mail" autocomplete="off" />
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
-      </div>
-      <!--/col-md-7-->
-      <div class="col-md-3 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Perfil</mat-label>
-          <mat-select>
-            <!-- formControlName="username"-->
-            <mat-option [value]="perfil.id" *ngFor="let perfil of listaPerfil">{{ perfil.name }}</mat-option>
-          </mat-select>
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
-        <!-- <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Perfil</mat-label>
-          <input
-            type="text"
-            matInput
-            placeholder="Digite seu CPF"
-            autocomplete="off">
-        </mat-form-field> -->
-      </div>
-      <!--/col-md-3-->
-    </div>
-    <div class="row">
       <div class="col-md-12">
-        <h3 class="mt-3 mb-0">Dados Profissionais</h3>
+        <h3 class="mt-3 mb-0">Dados Pessoais</h3>
         <hr class="my-1" />
       </div>
       <!-- /col-md-12 -->
-      <div class="col-md-3 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Data da Inscrição</mat-label>
-          <input type="text" matInput placeholder="Digite seu CEP" mask="00/00/0000" autocomplete="off" />
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
-      </div>
-      <div class="col-md-3 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>CRM</mat-label>
-          <input type="text" matInput placeholder="Digite seu CEP" autocomplete="off" />
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
+      <div class="col-12">
+        <div class="row">
+          <div class="col-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Nome Completo</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite primeiro Nome"
+                autocomplete="off"
+                formControlName="nome"
+              />
+              <mat-error>
+                <app-error-control-message [control]="form.controls.nome" label="Nome"></app-error-control-message>
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="col-12 col-md-4">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>CPF</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite o CPF"
+                autocomplete="off"
+                mask="000.000.000-00"
+                formControlName="cpf"
+              />
+              <mat-error>
+                <app-error-control-message [control]="form.controls.cpf" label="CPF"></app-error-control-message>
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="col-12 col-md-3">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Telefone</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite o Telefone"
+                autocomplete="off"
+                mask="(00) 0 0000 0000"
+                formControlName="telefone"
+              />
+              <mat-error>
+                <app-error-control-message [control]="form.controls.cpf" label="Telefone"></app-error-control-message>
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="col-12 col-md-5">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>E-mail</mat-label>
+              <input type="text" matInput placeholder="Digite o e-mail" autocomplete="off" formControlName="email" />
+              <mat-error>
+                <app-error-control-message [control]="form.controls.email" label="E-mail"></app-error-control-message>
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="col-md-4 col-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Sexo</mat-label>
+              <mat-select formControlName="sexo" required>
+                <mat-option [value]="sexo.value" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
+              </mat-select>
+              <mat-error>
+                <app-error-control-message [control]="form.controls.sexo" label="Sexo"> </app-error-control-message>
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="col-12 col-md-8">
+            <mat-form-field appearance="outline">
+              <mat-label>Data de nascimento</mat-label>
+              <input
+                matInput
+                type="text"
+                formControlName="dtNascimento"
+                mask="00/00/0000"
+                [dropSpecialCharacters]="false"
+              />
+              <mat-error>
+                <app-error-control-message [control]="form.controls.dtNascimento" label="Data de nascimento">
+                </app-error-control-message>
+                <!-- <app-error-control-message [control]="form.get('dtNascimento').hasError('dateValidator')" label="Data"></app-error-control-message> -->
+              </mat-error>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row" formGroupName="endereco">
+          <div class="col-md-12 col-sm-12">
+            <h3 class="mt-3 mb-0">Endereço Residencial</h3>
+            <hr class="my-1" />
+          </div>
+          <div class="col-md-3">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>CEP</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite seu CEP"
+                autocomplete="off"
+                mask="00000-000"
+                formControlName="nuCep"
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-md-2 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Estado</mat-label>
+              <mat-select formControlName="noEstado">
+                <mat-option [value]="estado.abbreviation" *ngFor="let estado of listaEstados">{{
+                  estado.name
+                }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="col-md-3 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Cidade</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite sua cidade"
+                autocomplete="off"
+                formControlName="noCidade"
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Logradouro</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite o logradouro"
+                autocomplete="off"
+                formControlName="descRua"
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Bairro</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite seu bairro"
+                autocomplete="off"
+                formControlName="descBairro"
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-md-2 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Número</mat-label>
+              <input type="number" matInput placeholder="Digite o número" autocomplete="off" formControlName="numero" />
+            </mat-form-field>
+          </div>
+          <div class="col-12" *ngIf="messageError !== ''">
+            <p class="m-0 is-invalid">[Error] {{ messageError }}</p>
+          </div>
+          <div class="col-12 d-flex justify-content-end">
+            <button class="btn btn-secondary ps-2 me-3" (click)="clearForm()">Limpar</button>
+            <button class="btn btn-primary ps-2" [disabled]="!form.valid || loading" (click)="submitUser()">
+              <ng-container *ngIf="loading">
+                <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                <span class="sr-only">Aguarde...</span>
+              </ng-container>
+              <span *ngIf="!loading">Salvar</span>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12 col-sm-12">
-        <h3 class="mt-3 mb-0">Endereço Residencial</h3>
-        <hr class="my-1" />
-      </div>
-      <!-- /col-md-12 -->
-      <div class="col-md-3">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>CEP</mat-label>
-          <input type="text" matInput placeholder="Digite seu CEP" autocomplete="off" mask="00000-00" />
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
-      </div>
-      <!--/col-md-3-->
-      <div class="col-md-2 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Estado</mat-label>
-          <mat-select>
-            <!-- formControlName="username"-->
-            <mat-option [value]="estado.id" *ngFor="let estado of listaEstados">{{ estado.name }}</mat-option>
-          </mat-select>
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
-      </div>
-      <!--/col-md-2-->
-      <div class="col-md-3 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Cidade</mat-label>
-          <input type="text" matInput placeholder="Digite sua cidade" autocomplete="off" />
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
-      </div>
-      <!--/col-md-3-->
-      <div class="col-md-4 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Logradouro</mat-label>
-          <input type="text" matInput placeholder="Digite o logradouro" autocomplete="off" />
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
-      </div>
-      <!--/col-md-4-->
-      <div class="col-md-4 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Bairro</mat-label>
-          <input type="text" matInput placeholder="Digite seu bairro" autocomplete="off" />
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
-      </div>
-      <!--/col-md-4-->
-      <div class="col-md-2 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Número</mat-label>
-          <input type="number" matInput placeholder="Digite o número" autocomplete="off" />
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
-      </div>
-      <!--/col-md-2-->
-      <div class="col-md-6 col-sm-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Complemento</mat-label>
-          <input type="text" matInput placeholder="Digite o complemento" autocomplete="off" />
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
-      </div>
-      <!--/col-md-6-->
-    </div>
-    <mat-dialog-actions align="end">
-      <button mat-button mat-dialog-close>cancelar</button>
-      <button mat-button [mat-dialog-close]="true" cdkFocusInitial>salvar</button>
-    </mat-dialog-actions>
   </form>
-</div>
+</app-modal-animation>
+<!-- <button mat-stroked-button class="btn btn-success ms-3" (click)="submitPreCadastroPaciente(2)"
+  [disabled]="!form.valid || loading">
+  <i *ngIf="!loading" class="feather icon-check"></i>
+  <ng-container *ngIf="loading">
+    <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+    <span class="sr-only">Aguarde...</span>
+  </ng-container>
+  <span *ngIf="!novoPaciente! && !loading">confirmar e continuar o Agendamento</span>
+  <span *ngIf="novoPaciente && !loading">salvar</span>
+</button> -->
